feat: show Telegram usernames
